# Real-Time-Intelligent-Multi-View

./: CMakeLists.txt  LICENSE  README.md  deps.txt
src/: main.cpp
src/app/: AppConfig.h  BigStreamSelector.cpp  BigStreamSelector.h  Cli.cpp  Cli.h
src/concurrency/: SpscQueue.h
src/decoder/: AudioDecodeWorker.cpp  AudioDecodeWorker.h  AudioDecoder.cpp  AudioDecoder.h  AudioExcitementScorer.cpp  AudioExcitementScorer.h  AudioFrameConverter.cpp  AudioFrameConverter.h  VideoDecodeWorker.cpp  VideoDecodeWorker.h  VideoDecoder.cpp  VideoDecoder.h
src/media/: AVFramePtr.h  AudioChunk.h  AudioFrame.h  AudioScore.h  FfmpegUtil.cpp  FfmpegUtil.h  MediaInput.cpp  MediaInput.h  VideoFrame.h
src/render/: SdlRenderer.cpp  SdlRenderer.h
src/sync/: AudioScoreBuffer.h  PlaybackClock.h  VideoFrameBuffer.h
src/vision/: GoalVisualHeuristic.h  VisualFeatureBuffer.h  VisualFeatureExtractor.cpp  VisualFeatureExtractor.h  VisualFrameFeature.h
